k8s/namespaces/base/kube-system/cilium/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  hosts:
    - 'hubble.${CLUSTER_SUB_DOMAIN}.${CLUSTER_DOMAIN}'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: hubble-ui.kube-system.svc.cluster.local
